syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.harmonia.grpc.service";

package harmoniacartservice;

service HarmoniaCartService {
  rpc AddItem (AddLineItemRequest) returns (Cart) {}
}

message AddLineItemRequest {
  string cartId = 1;
  string variantId = 2;
  int32 quantity = 3;
}

message Cart {
  repeated Item items = 1;
}

message Item {
  string variantId = 1;
  int32 quantity = 2;
}